# tetris_ai

./: conanfile.txt
src/: CMakeLists.txt
src/tetris_game/: CMakeLists.txt  main.cpp  tetris.cpp  tetris.h  tetris_config.cpp  tetris_config.h
src/tetris_game/pieces/: i_piece.cpp  i_piece.h  j_piece.cpp  j_piece.h  l_piece.cpp  l_piece.h  o_piece.cpp  o_piece.h  piece.cpp  piece.h  s_piece.cpp  s_piece.h  square.h  t_piece.cpp  t_piece.h  z_piece.cpp  z_piece.h
